--- a/src/package.json
+++ b/src/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.3.4",
     "jade": "*",
-    "stylus": "*"
+    "stylus": "*",
+    "mongodb": "1.3.11"
   }
 }
