--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
     "express": "3.3.4",
     "jade": "*",
     "stylus": "*",
-    "mongodb": "1.3.11"
+    "mongodb": "1.3.11",
+    "bcrypt": "*"
   }
 }
