--- a/src/package.json
+++ b/src/package.json
@@ -2,14 +2,31 @@
   "name": "info-sequences",
   "version": "0.0.1",
   "private": true,
+  "description": "chronological idea tracking",
+  "main": "app.js",
+  "dependencies": {
+    "bcrypt": "~0.7.6",
+    "express": "~3.3.4",
+    "jade": "~0.32.0",
+    "mongodb": "~1.3.11",
+    "mu2express": "~0.0.1",
+    "stylus": "~0.33.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "express": "3.3.4",
-    "jade": "*",
-    "stylus": "*",
-    "mongodb": "1.3.11",
-    "bcrypt": "*"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/trigunshin/info-sequences"
+  },
+  "author": "pcrane",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/trigunshin/info-sequences/issues"
+  },
+  "engines": {
+    "node": "0.10.x"
   }
 }
